test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_caret_as_letter_1.draco
proc ^() void : ^ := ^; corp;

proc main() void : a := 1; corp;


