test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_assign_to_address.draco
proc main() void : &a := 1; corp;

